---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: literal_string.md - `LiteralString` - Usages - Parameterized
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/literal_string.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing_extensions import LiteralString
2 | 
3 | # error: [invalid-type-form]
4 | a: LiteralString[str]
5 | 
6 | # error: [invalid-type-form]
7 | b: LiteralString["foo"]
```

# Diagnostics

```
error[invalid-type-form]: `LiteralString` expects no type parameter
 --> src/mdtest_snippet.py:4:4
  |
3 | # error: [invalid-type-form]
4 | a: LiteralString[str]
  |    ^^^^^^^^^^^^^^^^^^
5 |
6 | # error: [invalid-type-form]
  |

```

```
error[invalid-type-form]: `LiteralString` expects no type parameter
 --> src/mdtest_snippet.py:7:4
  |
6 | # error: [invalid-type-form]
7 | b: LiteralString["foo"]
  |    -------------^^^^^^^
  |    |
  |    Did you mean `Literal`?
  |

```
